data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1611.wast
;; 2. **Test Description:**     A `br_table` instruction in a loop with its index dynamically set via stack operations, followed by the `unreachable` instruction within a conditional branch that triggers based on a specific condition.    **Constraint Checked:** Verifies how the dynamic stack interaction and conditional logic influence the handling of `br_table` and the trap from `unreachable`.    **Edge Case Relation:** Ensures handling of complex control flows with dynamic indices in `br_table`.

(assert_invalid
  (module (func $br_table-unreachable (result i32)
    (block (result i32) 
      (loop (result i32)
        (i32.const 0)
        (br_table 0 (if (i32.const 0) (then unreachable) (else (i32.const 1))))
      )
    )
  ))
  "type mismatch"
)